<?xml version="1.0" encoding="utf-8"?>
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">Rotating Discs Wallpaper</string>
    <string name="wallpaper_disc">Rotating Discs</string>
    <string name="long_description">Rotating discs in different colors</string>

    <string name="discwp_settings">Settings</string>
    <string name="pref_cat_upgrade">Upgrade</string>
    <string name="pref_cat_basic">Basic settings</string>
    <string name="pref_cat_color">Color settings</string>
    <string name="pref_cat_light">Light settings</string>
    <string name="pref_cat_about">About</string>
    <string name="pref_upgrade_premium_title">Buy premium upgrade</string>
    <string name="pref_upgrade_premium_summary">Enables premium settings and disc types</string>
    <string name="pref_number_discs_title">Number of discs</string>
    <string name="pref_disc_type_title">Disc type</string>
    <string name="pref_disc_type_default">simple</string>
    <string name="pref_disc_type_summary_disabled">Upgrade to premium to set disc type</string>
    <string name="pref_color_bg_title">Background color</string>
    <string name="pref_color_bg_summary"></string>
    <string name="pref_color_disc_title">Disc color</string>
    <string name="pref_color_disc_summary"></string>
    <string name="pref_color_disc2_title">Disc range color</string>
    <string name="pref_color_disc2_summary"></string>
    <string name="pref_disc_shininess_title">Disc shininess</string>
    <string name="pref_light_brightness_title">Light brightness</string>

    <string name="pref_scr_credits">Credits</string>
    <string name="pref_credits_cat_programming">Programming and Design</string>
    <string name="pref_credits_programming_title">Tomas Skäre</string>
    <string name="pref_credits_cat_opensource">Open source libraries</string>
    <string name="pref_credits_glwallpaper_title">GLWallPaperService</string>
    <string name="pref_credits_glwallpaper_summary">Robert Green</string>
    <string name="pref_credits_colorpicker_title">ColorPickerPreference</string>
    <string name="pref_credits_colorpicker_summary">Sergey Margaritov &amp; Daniel Nilsson</string>
    <string name="pref_credits_billing_title">In-app Billing</string>
    <string name="pref_credits_billing_summary">Google</string>
</resources>
